Closed Bug 1601848 Opened 6 years ago Closed 6 years ago

Several immutability problems in recurrence components

Categories

(Calendar :: Internal Components, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 73.0

People

(Reporter: darktrojan, Assigned: darktrojan)

Details

Attachments

(1 file)

Working on some tests, I noticed I could change some things about objects that should be immutable. I dug deeper:

  • calRecurrenceDate throws Cr.NS_ERROR_OBJECT_IS_MUTABLE which isn't a thing, should be Cr.NS_ERROR_OBJECT_IS_IMMUTABLE
  • calRecurrenceRule in both backends skip checking if they are mutable before changing
Attachment #9114033 - Flags: review?(philipp)
Version: unspecified → Trunk
Attachment #9114033 - Flags: review?(philipp) → review+

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/0660d7e0fdfc
Enforce immutability in recurrenceRule and recurrenceDate; r=Fallen

Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → 73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: