Bug 1601848 - Enforce immutability in recurrenceRule and recurrenceDate; r=Fallen

--HG--
extra : rebase_source : 2cc18b4c8e6b59954491291549590400a19ad777
extra : histedit_source : 78b3b16ef2152395261dc35dc19e0b179adacb0a